2008-04-04  Michael J. Chudobiak  <mjc@svn.gnome.org>

	* schemas/Makefile.am:
	* schemas/desktop_gnome_thumbnail_cache.schemas.in:
	Added schema to support the thumbnail cache cleaner from the
	new gnome-settings-daemon housekeeping plug-in. Bug #523159.

2008-03-10  Kjartan Maraas  <kmaraas@gnome.org>

	* libgnome/gnome-triggers.c: Remove unused
	static functions: gnome_triggerlist_free() and
	gnome_trigger_free()

2008-03-10  Kjartan Maraas  <kmaraas@gnome.org>

	* configure.in: Post release bump.

======================= libgnome 2.22.0 ====================

2008-03-04  Kjartan Maraas  <kmaraas@gnome.org>

	* schemas/desktop_gnome_interface.shemas.in.in: Use the
	gio backend for the filechooser by default. Patch from Luca
	Ferretti.

2007-11-15  Ross Burton  <ross@openedhand.com>

	* schemas/desktop_gnome_applications_office.schemas.in:
	* schemas/Makefile.am:
	Add more default application schemas for office applications,
	specifically "calendar" and "tasks".  Default these to evolution.

======================== libgnome 2.21.90 =================

2008-01-28  Kjartan Maraas  <kmaraas@gnome.org>

	* NEWS: Update
	* configure.in: Bump version

2008-01-25  Tor Lillqvist  <tml@novell.com>

	* libgnome/gnome-program.c: Bypass accessibility initialisation on
	Windows for now. It isn't implemented yet.

2008-01-25  Christian Persch  <chpe@gnome.org>

	* libgnome/gnome-sound.c: Set sound to enabled by default. Bug
	#511928.

2008-01-23  Kjartan Maraas  <kmaraas@gnome.org>

	* libgnome/gnome-exec.c: (gnome_prepend_terminal_to_vector):
	* libgnome/gnome-gconf.c: Remove more unneeded use of popt.
	Patch from dmacks at netspace org. Closes bug #511424.

2008-01-23  Kjartan Maraas  <kmaraas@gnome.org>

	* libgnome/gnome-sound.c: Fix a warning by moving
	the prototype for _gnome_sound_set_enabled() a bit.
	Patch from dmacks at netspace org. Closes bug #511455.

2008-01-23  Tor Lillqvist  <tml@novell.com>

	* libgnome/gnome-config.c (check_path): Use g_stat().
