@@ -1,3 +1,7 @@
+2008-04-09  Stefan Kost  <ensonic@users.sf.net>
+
+	* libgnome/gnome-program.c: Unref GConfClient. Bug #525815
+
 2008-04-04  Michael J. Chudobiak  <mjc@svn.gnome.org>
 
 	* schemas/Makefile.am:
